# KaptainhooK

./: .gitignore  ARCHITECTURE.en.md  ARCHITECTURE.md  Cargo.toml  LICENSE  NOTICE  README.en.md  README.md  SECURITY.md  run_install_conflict_e2e.ps1
application/kh-app/: Cargo.toml
application/kh-app/src/: admin.rs  guard.rs  lib.rs  uninstall.rs
apps/bootstrap/: Cargo.toml
apps/bootstrap/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/guard/: Cargo.toml
apps/guard/src/: main.rs
apps/restore/: Cargo.toml
apps/restore/src/: main.rs
apps/service/: Cargo.toml
apps/service-restart/: Cargo.toml
apps/service-restart/src/: main.rs
apps/service/src/: main.rs
apps/settings/: Cargo.toml
apps/settings/src/: main.rs
apps/settings/web/: app.js  index.html  style.css
apps/setup/: Cargo.toml  app.manifest  build.rs  resources.rc
apps/setup/src/: main.rs
apps/tray/: Cargo.toml
apps/tray/src/: main.rs
apps/uninstall/: Cargo.toml
apps/uninstall/src/: main.rs
composition/kh-composition/: Cargo.toml  build.rs
composition/kh-composition/src/: cli.rs  error.rs  guard.rs  lib.rs  paths.rs  restore.rs  service.rs  system.rs  targets.rs  task.rs
domain/kh-domain/: Cargo.toml
domain/kh-domain/src/: error.rs  lib.rs  path.rs
domain/kh-domain/src/model/: config.rs  exit_codes.rs  friction.rs  guard_notification.rs  language.rs  mod.rs  nudge.rs  policy.rs  prompt.rs  reaction.rs  session.rs  target.rs  threat.rs
domain/kh-domain/src/port/: mod.rs
domain/kh-domain/src/port/driven/: auth_prompt.rs  backup_store.rs  clock.rs  config_repository.rs  ifeo_repository.rs  lease_store.rs  log_writer.rs  mod.rs  privileged_launcher.rs  random_source.rs  registry_port.rs  restore_kicker.rs  signature_verifier.rs  target_path_resolver.rs  targets_repository.rs  task_scheduler.rs  user_notifier.rs
domain/kh-domain/src/port/driving/: admin_use_case.rs  guard_use_case.rs  install_use_case.rs  mod.rs
domain/kh-domain/src/service/: mod.rs  ownership_service.rs  reaction_service.rs  threat_service.rs
engine/kh-engine/: Cargo.toml
engine/kh-engine/src/: lib.rs
infrastructure/kh-adapter-clock/: Cargo.toml
infrastructure/kh-adapter-clock/src/: lib.rs
infrastructure/kh-adapter-fs/: Cargo.toml
infrastructure/kh-adapter-fs/src/: lib.rs
infrastructure/kh-adapter-guard/: Cargo.toml
infrastructure/kh-adapter-guard/src/: lib.rs
infrastructure/kh-adapter-paths/: Cargo.toml
infrastructure/kh-adapter-paths/src/: lib.rs
infrastructure/kh-adapter-registry/: Cargo.toml
infrastructure/kh-adapter-registry/src/: lib.rs
infrastructure/kh-adapter-service-ipc/: Cargo.toml
infrastructure/kh-adapter-service-ipc/src/: lib.rs
infrastructure/kh-adapter-signature/: Cargo.toml
infrastructure/kh-adapter-signature/src/: lib.rs
infrastructure/kh-adapter-task/: Cargo.toml
infrastructure/kh-adapter-task/src/: lib.rs
infrastructure/kh-adapter-uninstall-state/: Cargo.toml
infrastructure/kh-adapter-uninstall-state/src/: lib.rs
scripts/: package.ps1  run_integration_tests.ps1
shared/kh-log-utils/: Cargo.toml
shared/kh-log-utils/src/: lib.rs
ui/kh-ui-common/: Cargo.toml
ui/kh-ui-common/src/: i18n.rs  lib.rs  message_box.rs
ui/kh-ui-guard/: Cargo.toml
ui/kh-ui-guard/src/: dialog.rs  hello.rs  lib.rs
