[package]
name = "kh-service"
description = "KaptainhooK executable: privileged service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kh-composition = { workspace = true }
kh-log-utils = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
