[package]
name = "kh-setup"
description = "KaptainhooK executable: setup wizard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "kh-setup"
path = "src/main.rs"
test = false

[dependencies]
clap = { workspace = true }
kh-composition = { path = "../../composition/kh-composition" }
serde_json = { workspace = true }
kh-log-utils = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

