[package]
name = "kh-tray"
description = "KaptainhooK system tray application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kh-tray"
path = "src/main.rs"

[dependencies]
kh-composition = { workspace = true }
kh-log-utils = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
