[package]
name = "kh-adapter-clock"
description = "KaptainhooK infrastructure adapter: Clock and input tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kh-domain = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
