[package]
name = "kh-adapter-signature"
description = "KaptainhooK infrastructure adapter: WinTrust signature verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kh-domain = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
