[package]
name = "kh-adapter-task"
description = "KaptainhooK infrastructure adapter: Task Scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kh-domain = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
